--- a/POI_Alt-Category-Automation.ipynb
+++ b/POI_Alt-Category-Automation.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4a3fc77a",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "27a83e9a",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d354d631",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "cefa1999",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6c771cea",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "cd65eb92",
    "metadata": {},
    "outputs": [],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "38278986",
    "metadata": {},
    "outputs": [],
@@ -298,7 +298,7 @@
     "import google.generativeai as genai\n",
     "genai.configure(api_key=api_key)\n",
     "model = genai.GenerativeModel(\"gemini-2.0-flash\")\n",
-    "context = \"You are a Category Suggestion Agent. Your job is to read a POI record that I provide you with and propose an alternative category for it using its name and category.\"+\\\n",
+    "context = \"You are a Category Suggestion Agent. Your job is to read a POI record that I provide you with and propose an alternative category for it which is a one step deaper categorization (Outputing 'italian restaurant' instead of 'restaurant') using its name and category.\"+\\\n",
     "        f\"These are all the categories in the schema:{str(categories_list)}.\" +\\\n",
     "        \"I am going to provide you with all the POIs with no alternative category, I will provided the names and the primary categorys in this format: 'name': 'primary category'\" +\\\n",
     "        f\"These are the POIs: {str(dict(list(no_alt.items())))}\" +\\\n",
@@ -689,7 +689,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -703,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
